openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-rpc-proxy-rabbitmq
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: node-rpc-proxy-rabbitmq
  sessionAffinity: None
  type: ClusterIP
