openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: node-rpc-proxy-rabbitmq
spec:
  host: rpc-proxy.apps.openshift.webcomm.com.tw
  port:
    targetPort: http
  to:
    kind: Service
    name: node-rpc-proxy-rabbitmq
